references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/CaseSubjectObjective_Invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:2bc1c173df4a1fe498c3e0f3630a3908e417b83a169e193a1a009e01acd28f61
size 2697
